syntax = "proto3";

option csharp_namespace = "GrpcServices.Restaurant";


message RestaurantMessage {
	string id = 1;
	string name = 2;
}

message GetRestaurantsRequest{}
message GetRestaurantsResponse {
	repeated RestaurantMessage restaurants = 1;
}

message CreateRestaurantRequest {
	string name = 1;
}
message CreateRestaurantResponse {}

message DeleteRestaurantRequest {
	string id = 1;
}
message DeleteRestaurantResponse {}

message UpdateRestaurantRequest {
	RestaurantMessage restaurant = 1;
}
message UpdateRestaurantResponse {}

service Restaurant {
	rpc GetRestaurants(GetRestaurantsRequest) returns (GetRestaurantsResponse);
	rpc CreateRestaurant(CreateRestaurantRequest) returns (CreateRestaurantResponse);
	rpc DeleteRestaurant(DeleteRestaurantRequest) returns (DeleteRestaurantResponse);
	rpc UpdateRestaurant(UpdateRestaurantRequest) returns (UpdateRestaurantResponse);
}

